--- a/www/index.html
+++ b/www/index.html
@@ -45,8 +45,10 @@
             <input name="shared" id="shared" type="checkbox">
             <label for="shared"><span></span>Shared?</label>
 
-            <button type="submit" id="add-item">&plus;</button>
+            <button type="submit" id="add-item"></button>
         </form>
+
+        <hr/>
 
         <ul id="cached-item-display"></ul>
 
