--- a/www/index.html
+++ b/www/index.html
@@ -40,6 +40,17 @@
         <form id="add-item-form">
             <input name="description" type="text" placeholder="Description" required>
 
+            <select name="category">
+                <option>House/rent</option>
+                <option>Groceries/house things</option>
+                <option>Petrol</option>
+                <option>Entertainment</option>
+                <option>Holidays</option>
+                <option>Car</option>
+                <option>Presents</option>
+                <option>Other</option>
+            </select>
+
             <input name="price" type="number" min="0.01" step="0.01" placeholder="Price" required>
 
             <input name="shared" id="shared" type="checkbox">
