--- a/www/index.html
+++ b/www/index.html
@@ -41,14 +41,14 @@
             <input name="description" type="text" placeholder="Description" required>
 
             <select name="category">
-                <option>House/rent</option>
-                <option>Groceries/house things</option>
-                <option>Petrol</option>
-                <option>Entertainment</option>
-                <option>Holidays</option>
-                <option>Car</option>
-                <option>Presents</option>
-                <option>Other</option>
+                <option value="house">House/rent</option>
+                <option value="groceries">Groceries/house things</option>
+                <option value="petrol">Petrol</option>
+                <option value="entertainment">Entertainment</option>
+                <option value="holidays">Holidays</option>
+                <option value="car">Car</option>
+                <option value="presents">Presents</option>
+                <option value="other">Other</option>
             </select>
 
             <input name="price" type="number" min="0.01" step="0.01" placeholder="Price" required>
